fix characters styles and cookies modal z-index

--- a/src/css/characters.css
+++ b/src/css/characters.css
@@ -25,16 +25,16 @@
   margin-bottom: 40px;
 }
 
-.swiper-pagination-bullet {
-  background-color: #d5d5d5 !important;
-  width: 8px !important;
-  height: 8px !important;
-  opacity: 0.5 !important;
+.swiper-pagination .swiper-pagination-bullet {
+  background-color: #d5d5d5;
+  width: 8px;
+  height: 8px;
+  opacity: 0.5;
 }
 
-.swiper-pagination-bullet-active {
-  background-color: #181412 !important;
-  opacity: 1 !important;
+.swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #181412;
+  opacity: 1;
 }
 
 .char-item {
