--- a/src/css/cookies-modal.css
+++ b/src/css/cookies-modal.css
@@ -8,7 +8,7 @@
 
 
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
+  z-index: 10002;
 
   pointer-events: none;
   visibility: hidden;
